--- a/crates/calendar_server/Cargo.toml
+++ b/crates/calendar_server/Cargo.toml
@@ -11,3 +11,4 @@ tracing.workspace = true
 tracing-subscriber = { workspace = true }
 chrono = { workspace = true }
 ansi_escapers = { workspace = true }
+config.workspace = true
