--- a/crates/configman/Cargo.toml
+++ b/crates/configman/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "config"
+name = "configman"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tracing = { workspace = true }
 serde.workspace = true
+config.workspace = true
+tracing.workspace = true
 serde_json.workspace = true
 global_constants.workspace = true
