--- a/crates/calendar_server/Cargo.toml
+++ b/crates/calendar_server/Cargo.toml
@@ -12,3 +12,5 @@ tracing-subscriber = { workspace = true }
 chrono = { workspace = true }
 ansi_escapers = { workspace = true }
 config.workspace = true
+serde_json.workspace = true
+configman.workspace = true
