--- a/crates/calendar_server/Cargo.toml
+++ b/crates/calendar_server/Cargo.toml
@@ -14,3 +14,4 @@ ansi_escapers = { workspace = true }
 config.workspace = true
 serde_json.workspace = true
 configman.workspace = true
+global_constants.workspace = true
