--- a/crates/calendar_server/Cargo.toml
+++ b/crates/calendar_server/Cargo.toml
@@ -15,3 +15,9 @@ config.workspace = true
 serde_json.workspace = true
 configman.workspace = true
 global_constants.workspace = true
+axum.workspace = true
+hyper.workspace = true
+rustls.workspace = true
+tungstenite.workspace = true
+appstate.workspace = true
+webserver.workspace = true
