--- a/crates/webserver/Cargo.toml
+++ b/crates/webserver/Cargo.toml
@@ -5,3 +5,10 @@ edition = "2024"
 
 [dependencies]
 tracing = { workspace = true }
+axum = { workspace = true }
+hyper = { workspace = true }
+rustls = { workspace = true }
+tungstenite = { workspace = true }
+websockets.workspace = true
+config.workspace = true
+appstate.workspace = true
