fix some errors

--- a/crates/calendar_server/Cargo.toml
+++ b/crates/calendar_server/Cargo.toml
@@ -21,3 +21,4 @@ rustls.workspace = true
 tungstenite.workspace = true
 appstate.workspace = true
 webserver.workspace = true
+futures.workspace = true
