--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ chrono = { version = "0.4.41", features = ["serde"] }
 colorlab = { git = "https://github.com/SturdyFool10/ColorLab.git" }
 humantime = "2.2.0"
 humantime-serde = "1.1.1"
-hyper = { version = "1.7.0", features = ["server", "http1", "tracing"] }
+hyper = { version = "1.7.0", features = ["server", "http1"] }
 jsonwebtoken = "9.3.1"
 regex = "1.11.2"
 rusqlite = { version = "0.37.0", features = ["bundled"] }
@@ -25,6 +25,7 @@ toml = "0.9.5"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 tungstenite = { version = "0.27.0", features = ["handshake", "http", "sha1", "httparse"] }
+futures = "0.3"
 
 
 #internal deps
