--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 tungstenite = { version = "0.27.0", features = ["handshake", "http", "sha1", "httparse"] }
 futures = "0.3"
+futures-util = { version = "0.3.31", features = ["sink", "tokio-io", "unstable", "write-all-vectored"] }
+rmp-serde = "1.3.0"
 
 
 #internal deps
