--- a/crates/calendar_server/Cargo.toml
+++ b/crates/calendar_server/Cargo.toml
@@ -22,3 +22,5 @@ tungstenite.workspace = true
 appstate.workspace = true
 webserver.workspace = true
 futures.workspace = true
+futures-util = "0.3.31"
+rmp-serde = "1.3.0"
