--- a/crates/webserver/Cargo.toml
+++ b/crates/webserver/Cargo.toml
@@ -12,3 +12,7 @@ tungstenite = { workspace = true }
 websockets.workspace = true
 config.workspace = true
 appstate.workspace = true
+tokio.workspace = true
+global_constants.workspace = true
+futures-util.workspace = true
+rmp-serde.workspace = true
