--- a/crates/appstate/Cargo.toml
+++ b/crates/appstate/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+axum.workspace = true
+uuid.workspace = true
 tracing = { workspace = true }
 config.workspace = true
 tokio.workspace = true
