--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ futures-util = { version = "0.3.31", features = ["sink", "tokio-io", "unstable",
 rmp-serde = "1.3.0"
 tokio-stream = "0.1.17"
 uuid = { version = "1.18.1", features = ["v4"] }
+colored = "2"
+once_cell = "1.19"
+
 
 
 #internal deps
