--- a/crates/logging/Cargo.toml
+++ b/crates/logging/Cargo.toml
@@ -10,3 +10,5 @@ chrono = { workspace = true }
 global_constants.workspace = true
 ansi_escapers = { workspace = true }
 regex.workspace = true
+colored = { workspace = true }
+once_cell = { workspace = true }
