--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ tokio-stream = "0.1.17"
 uuid = { version = "1.18.1", features = ["v4"] }
 colored = "2"
 once_cell = "1.19"
-
+async-trait = "0.1.89"
 
 
 #internal deps
