add permissions and start initializing the database

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,4 @@ auth = { path = "crates/auth" }
 global_constants = { path = "crates/global_constants" }
 logging = { path = "crates/logging" }
 configman = { path = "crates/configman" }
+permissions = { path = "crates/permissions" }
