--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2024"
 [dependencies]
 rusqlite = { workspace = true }
 tracing = { workspace = true }
+chrono = { workspace = true }
+colorlab = { workspace = true }
+humantime = { workspace = true }
