--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ uuid = { version = "1.18.1", features = ["v4"] }
 colored = "2"
 once_cell = "1.19"
 async-trait = "0.1.89"
-
+tower-http = { version = "0.6.6", features = ["fs"] }
 
 #internal deps
 appstate = { path = "crates/appstate" }
