--- a/crates/webserver/Cargo.toml
+++ b/crates/webserver/Cargo.toml
@@ -17,3 +17,4 @@ global_constants.workspace = true
 futures-util.workspace = true
 rmp-serde.workspace = true
 uuid.workspace = true
+tower-http = { version = "0.6.6", features = ["fs"] }
